// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildScaleLUT golden > grayscale, linear, full steps 1`] = `
[
  0,
  0,
  0,
  255,
  8,
  8,
  8,
  255,
  16,
  16,
  16,
  255,
  25,
  25,
  25,
  255,
  33,
  33,
  33,
  255,
  41,
  41,
  41,
  255,
  49,
  49,
  49,
  255,
  58,
  58,
  58,
  255,
  66,
  66,
  66,
  255,
  74,
  74,
  74,
  255,
  82,
  82,
  82,
  255,
  90,
  90,
  90,
  255,
  99,
  99,
  99,
  255,
  107,
  107,
  107,
  255,
  115,
  115,
  115,
  255,
  123,
  123,
  123,
  255,
  132,
  132,
  132,
  255,
  140,
  140,
  140,
  255,
  148,
  148,
  148,
  255,
  156,
  156,
  156,
  255,
  165,
  165,
  165,
  255,
  173,
  173,
  173,
  255,
  181,
  181,
  181,
  255,
  189,
  189,
  189,
  255,
  197,
  197,
  197,
  255,
  206,
  206,
  206,
  255,
  214,
  214,
  214,
  255,
  222,
  222,
  222,
  255,
  230,
  230,
  230,
  255,
  239,
  239,
  239,
  255,
  247,
  247,
  247,
  255,
  255,
  255,
  255,
  255,
]
`;

exports[`buildScaleLUT golden > inferno, symlog, medium steps (32) 1`] = `
[
  0,
  0,
  4,
  255,
  0,
  0,
  4,
  255,
  0,
  0,
  4,
  255,
  4,
  0,
  24,
  255,
  4,
  0,
  24,
  255,
  4,
  0,
  24,
  255,
  11,
  0,
  38,
  255,
  11,
  0,
  38,
  255,
  11,
  0,
  38,
  255,
  22,
  0,
  47,
  255,
  22,
  0,
  47,
  255,
  34,
  0,
  53,
  255,
  46,
  0,
  56,
  255,
  57,
  0,
  58,
  255,
  78,
  4,
  60,
  255,
  99,
  17,
  65,
  255,
  156,
  77,
  122,
  255,
  209,
  102,
  141,
  255,
  255,
  119,
  150,
  255,
  255,
  128,
  153,
  255,
  255,
  136,
  155,
  255,
  255,
  144,
  156,
  255,
  255,
  144,
  156,
  255,
  255,
  151,
  155,
  255,
  255,
  151,
  155,
  255,
  255,
  151,
  155,
  255,
  255,
  159,
  154,
  255,
  255,
  159,
  154,
  255,
  255,
  159,
  154,
  255,
  255,
  165,
  152,
  255,
  255,
  165,
  152,
  255,
  255,
  165,
  152,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, asymmetric positive-only range, symlog 1`] = `
[
  68,
  1,
  84,
  255,
  57,
  86,
  139,
  255,
  42,
  120,
  142,
  255,
  36,
  136,
  141,
  255,
  33,
  152,
  138,
  255,
  34,
  168,
  132,
  255,
  57,
  183,
  119,
  255,
  57,
  183,
  119,
  255,
  86,
  197,
  102,
  255,
  86,
  197,
  102,
  255,
  86,
  197,
  102,
  255,
  122,
  209,
  81,
  255,
  122,
  209,
  81,
  255,
  122,
  209,
  81,
  255,
  122,
  209,
  81,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, linear, coarse steps (8) 1`] = `
[
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  54,
  91,
  140,
  255,
  54,
  91,
  140,
  255,
  54,
  91,
  140,
  255,
  54,
  91,
  140,
  255,
  54,
  91,
  140,
  255,
  39,
  127,
  142,
  255,
  39,
  127,
  142,
  255,
  39,
  127,
  142,
  255,
  39,
  127,
  142,
  255,
  34,
  161,
  134,
  255,
  34,
  161,
  134,
  255,
  34,
  161,
  134,
  255,
  34,
  161,
  134,
  255,
  76,
  194,
  108,
  255,
  76,
  194,
  108,
  255,
  76,
  194,
  108,
  255,
  76,
  194,
  108,
  255,
  76,
  194,
  108,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, linear, full steps 1`] = `
[
  68,
  1,
  84,
  255,
  69,
  12,
  94,
  255,
  71,
  23,
  104,
  255,
  72,
  35,
  116,
  255,
  70,
  45,
  122,
  255,
  68,
  55,
  128,
  255,
  65,
  65,
  134,
  255,
  61,
  75,
  137,
  255,
  58,
  84,
  139,
  255,
  54,
  92,
  140,
  255,
  50,
  100,
  141,
  255,
  47,
  108,
  142,
  255,
  43,
  117,
  142,
  255,
  40,
  125,
  142,
  255,
  37,
  133,
  141,
  255,
  34,
  140,
  141,
  255,
  33,
  149,
  139,
  255,
  33,
  156,
  136,
  255,
  34,
  163,
  134,
  255,
  38,
  171,
  130,
  255,
  50,
  179,
  123,
  255,
  61,
  186,
  117,
  255,
  73,
  193,
  109,
  255,
  90,
  199,
  99,
  255,
  107,
  204,
  90,
  255,
  127,
  211,
  78,
  255,
  148,
  215,
  64,
  255,
  169,
  219,
  51,
  255,
  190,
  223,
  38,
  255,
  213,
  226,
  38,
  255,
  233,
  228,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, symlog, coarse steps (8) -- banded 1`] = `
[
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  69,
  50,
  125,
  255,
  54,
  91,
  140,
  255,
  54,
  91,
  140,
  255,
  76,
  194,
  108,
  255,
  76,
  194,
  108,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  160,
  217,
  57,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, symlog, full steps 1`] = `
[
  68,
  1,
  84,
  255,
  68,
  4,
  87,
  255,
  69,
  7,
  89,
  255,
  69,
  9,
  92,
  255,
  69,
  12,
  94,
  255,
  70,
  16,
  98,
  255,
  70,
  19,
  101,
  255,
  71,
  23,
  104,
  255,
  71,
  28,
  110,
  255,
  72,
  34,
  115,
  255,
  71,
  39,
  118,
  255,
  70,
  47,
  123,
  255,
  68,
  54,
  127,
  255,
  65,
  65,
  134,
  255,
  60,
  79,
  138,
  255,
  48,
  106,
  142,
  255,
  53,
  181,
  121,
  255,
  99,
  201,
  95,
  255,
  127,
  211,
  78,
  255,
  151,
  215,
  63,
  255,
  167,
  218,
  52,
  255,
  182,
  221,
  42,
  255,
  193,
  223,
  38,
  255,
  203,
  225,
  38,
  255,
  213,
  226,
  38,
  255,
  221,
  227,
  37,
  255,
  226,
  227,
  37,
  255,
  233,
  228,
  37,
  255,
  238,
  229,
  37,
  255,
  243,
  230,
  37,
  255,
  248,
  230,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`buildScaleLUT golden > viridis, symmetrical range, symlog 1`] = `
[
  68,
  1,
  84,
  255,
  68,
  1,
  84,
  255,
  71,
  24,
  106,
  255,
  71,
  24,
  106,
  255,
  71,
  24,
  106,
  255,
  70,
  47,
  123,
  255,
  65,
  68,
  135,
  255,
  57,
  86,
  139,
  255,
  33,
  152,
  138,
  255,
  57,
  183,
  119,
  255,
  86,
  197,
  102,
  255,
  86,
  197,
  102,
  255,
  122,
  209,
  81,
  255,
  122,
  209,
  81,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  167,
  218,
  52,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  210,
  226,
  38,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
  253,
  231,
  37,
  255,
]
`;

exports[`normalize/denormalize golden > grayscale, linear, full steps 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -80,
    -50,
    0,
    50,
    80,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > inferno, symlog, medium steps (32) 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -39.128886,
    -9.049876,
    0,
    9.049876,
    39.128886,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, asymmetric positive-only range, symlog 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    5,
    8.33942,
    17.13731,
    53.827001,
    164.735715,
    320.861535,
    500,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, linear, coarse steps (8) 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -80,
    -50,
    0,
    50,
    80,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, linear, full steps 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -80,
    -50,
    0,
    50,
    80,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, symlog, coarse steps (8) -- banded 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -39.128886,
    -9.049876,
    0,
    9.049876,
    39.128886,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, symlog, full steps 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -100,
    -39.128886,
    -9.049876,
    0,
    9.049876,
    39.128886,
    100,
  ],
}
`;

exports[`normalize/denormalize golden > viridis, symmetrical range, symlog 1`] = `
{
  "roundTrip": [
    0,
    0.1,
    0.25,
    0.5,
    0.75,
    0.9,
    1,
  ],
  "values": [
    -30,
    -13.006234,
    -3.253642,
    0.713325,
    11.486497,
    40.115075,
    90,
  ],
}
`;
